fixed chessboard being aligned to the left & not in center. Fixed coordination colors. fixed highlighting the square when piece is clicked on

--- a/css/chessboard-1.0.0.css
+++ b/css/chessboard-1.0.0.css
@@ -25,27 +25,29 @@
 .white-1e1d7 {
   /* background-image: url('../img/board/lightWood.png'); */
   /* background-image: url('../img/board/lightWood2.jpg'); */
-
+  /* color: #b58863; */
   /* background-color: #f0d9b5; */
+  
   background-color: #EAE9D2;
-  color: #b58863;
+  color: #4D6D92;
 }
 
 .black-3c85d {
   /* background-image: url('/img/board/darkWood.png'); */
-  /* background-image: url('/img/board/darkWood2.jpg'); */
-  
+  /* background-image: url('/img/board/darkWood2.jpg'); */  
   /* background-color: #b58863; */
+  /* color: #f0d9b5; */
+
   background-color: #4B7399;
-  color: #f0d9b5;
+  color: #ECECD7;
 }
 
 .highlight1-32417, .highlight2-9c5d2 {
-  /* box-shadow: inset 0 0 3px 3px yellow; */
-
-  /* Best colors */
-  /* box-shadow: inset 0 0 3px 4px #52b1dc; */
   box-shadow: inset 0 0 3px 4px #0b5987;
+
+  /* Other alternative colors */
+  /* box-shadow: inset 0 0 3px 4px #52b1dc; */
+  /* box-shadow: inset 0 0 3px 3px yellow; */
 }
 
 .notation-322f9 {
